--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
+    implementation "com.android.support:recyclerview-v7:26.1.0"
 }
