--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
         <activity android:name=".ui.intro.step1.IntroStep1Activity"/>
         <activity android:name=".ui.intro.step2.IntroStep2Activity"/>
+        <activity android:name=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
